# advent-of-code-2024

./: Cargo.toml  README.md  run.py
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: digits.rs  grid.rs  lib.rs  point.rs
day01/: Cargo.toml
day01/src/: lib.rs  main.rs  part1.rs  part2.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs  part1.rs  part2.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs  part1.rs  part2.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs  part1.rs  part2.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs  part1.rs  part2.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs  part1.rs  part2.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs  part1.rs  part2.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs  part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: lib.rs  part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: lib.rs  part1.rs  part2.rs
